--- a/views/newpost.ejs
+++ b/views/newpost.ejs
@@ -4,7 +4,7 @@
         <div class="row">
             <h1 style="text-align: center">Maak promotie</h1>
             <div style="width: 30%; margin: 25px auto;">
-                <form action="/posts" method="POST">
+                <form action="/posts" method="POST" id="partnerform">
                     <div class="form-group">
                         <input class="form-control" type="text" name="instaname" placeholder="Instagram naam">
                     </div>
@@ -14,8 +14,20 @@
                     <div class="form-group">
                         <input class="form-control" type="text" name="link" placeholder="Link">
                     </div>
+                    
                     <div class="form-group">
-                        <input class="form-control" type="text" name="voordeel" placeholder="Gekozen voordeel">
+                        <select name="partner" form="partnerform" class="form-control">
+                            <% partners.forEach(function(partner){ %>
+                                <option value="<%= partner.name %>"><%= partner.name %></option>
+                            <% }) %>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <select name="voordeel" form="partnerform" class="form-control">
+                            <% partners.forEach(function(partner){ %>
+                                <option value="<%= partner.voordeel %>"><%= partner.voordeel %></option>
+                            <% }) %>
+                        </select>
                     </div>
                     <div class="form-group">
                         <button class="btn btn-lg btn-primary btn-block">Submit!</button>
