--- a/views/editpartner.ejs
+++ b/views/editpartner.ejs
@@ -2,17 +2,17 @@
     
     <div class="container">
         <div class="row">
-            <h1 style="text-align: center">Nieuwe partner</h1>
+            <h1 style="text-align: center">Edit partner</h1>
             <div style="width: 30%; margin: 25px auto;">
-                <form action="/partners" method="POST">
+                <form action="/partners/<%= partner._id %>/?_method=PUT" method="POST">
                     <div class="form-group">
-                        <input class="form-control" type="text" name="name" placeholder="naam">
+                        <input class="form-control" type="text" name="partner[name]" value="<%= partner.name %>">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" name="image" placeholder="image">
+                        <input class="form-control" type="text" name="partner[image]" value="<%= partner.image %>">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" name="voordeel" placeholder="voordeel">
+                        <input class="form-control" type="text" name="partner[voordeel]" value="<%= partner.voordeel %>">
                     </div>
                     <div class="form-group">
                         <button class="btn btn-lg btn-primary btn-block">Submit!</button>
