--- a/views/newpost.ejs
+++ b/views/newpost.ejs
@@ -9,10 +9,10 @@
                         <input class="form-control" type="text" name="instaname" placeholder="Instagram naam">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" name="email" placeholder="Email">
+                        <input class="form-control" type="email" name="email" placeholder="Email">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" name="link" placeholder="Link">
+                        <input class="form-control" type="url" name="link" placeholder="Link vb. https://www.instagram.com/p/Bms7EccCnF3/?taken-by=2brand.be">
                     </div>
                     
                     <div class="form-group">
@@ -33,7 +33,7 @@
                         <button class="btn btn-lg btn-primary btn-block">Submit!</button>
                     </div>
                 </form>
-                <a href="/campgrounds">Go Back</a>
+                <!-- <a href="/posts">Go Back</a> -->
             </div>
         </div>
     </div>
