--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -5,7 +5,7 @@
        <% partners.forEach(function(partner){ %>
             <h2><%= partner.name %></h2>
             <div class="thumbnail">
-                <table class="table table-hover">
+                <table class="table table">
                     <thead>
                         <tr>
                             <th>username</th>
@@ -18,7 +18,7 @@
                     </thead>
                     <tbody>
                         <% partner.posts.forEach(function(post){ %>
-                            <tr>
+                            <tr <% if(post.status){ %> class="statusgoed" <% }else{ %> class="statusslecht" <% } %> >
                                 <td><%= post.instaname %></td>
                                 <td><%= post.partner %></td>
                                 <td><%= post.tijdstip %></td>
@@ -26,6 +26,9 @@
                                 <td class="partnertlink postlinkwidth"><a href="<%= post.link %>"><%= post.link %></a></td>
                                 <td><%= post.voordeel %></td>
                                 <td>
+                                    <form method="POST" action="/posts/<%= post._id %>/status?_method=PUT" >
+                                        <input type="Submit" class="btn btn-xs btn-warning" value="Status">
+                                    </form>
                                     <form class="delete-form" method="POST" action="/posts/<%= post._id %>?_method=DELETE" >
                                         <input type="Submit" class="btn btn-xs btn-danger" value="Delete">
                                     </form>
