--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -7,6 +7,20 @@
 #partnerimage{
     width: 100%;
 }
+.resultContainer .viewThisResult {
+    display: none;
+}
+.resultContainer:hover .viewThisResult {
+    display: block;
+}
+.resultContainer{
+    height: 65px
+}
+.buttonmargin{
+    margin-bottom: 2px;
+    margin-top: 0;
+    padding-top:0
+}
 .statusgoed{
     background-color: #def7e1;
 }
