--- a/views/partners.ejs
+++ b/views/partners.ejs
@@ -4,7 +4,7 @@
        <div class="row" style="display:flex; flex-wrap: wrap;">
             <% partners.forEach(function(partner){ %>
                 <div class="col-md-4 col-sm-6">
-                    <div id="partner-thumbnail" class="thumbnail">
+                    <div id="partner-thumbnail" class="thumbnail animated zoomIn">
                         <h4 class="text-center"><%= partner.name %></h4>
                         <img id="partnerimage" src="<%= partner.image %>">
                         <p class="partner-text"><%= partner.voordeel %></p>
