Toggle button and fix delete bug in DB

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -7,10 +7,10 @@
 #partnerimage{
     width: 100%;
 }
-.resultContainer .viewThisResult {
+.viewThisResult {
     display: none;
 }
-.resultContainer:hover .viewThisResult {
+ #optiontoggle:checked ~ * .viewThisResult{
     display: block;
 }
 .resultContainer{
