minor update (favicon)

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>2brand</title>
+        <link rel="icon" type="image/png" href="https://i.imgur.com/ZlgzOpq.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="https://i.imgur.com/LvqIguP.png" sizes="16x16" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
         <link rel="stylesheet" href="/stylesheets/index.css">
