V3 added admin authentication

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,6 +20,7 @@
                         <li><a href="/partners">Partners</a></li>
                         <li><a href="/posts/new">New post</a></li>
                         <li><a href="/partners/new">New partner</a></li>
+                        <li><a href="/logout">Logout</a></li>
                     </ul>
                 </div>
             </div>
