--- a/views/newpost.ejs
+++ b/views/newpost.ejs
@@ -1,4 +1,33 @@
-<% include ./partials/header.ejs %>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>2brand</title>
+        <link rel="icon" type="image/png" href="https://i.imgur.com/ZlgzOpq.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="https://i.imgur.com/LvqIguP.png" sizes="16x16" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+        <link rel="stylesheet" href="/stylesheets/index.css">
+    </head>
+    <body>
+        
+    <% if(currentUser){ %>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="/">2brand</a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="/posts">Posts</a></li>
+                        <li><a href="/partners">Partners</a></li>
+                        <li><a href="/posts/new">New post</a></li>
+                        <li><a href="/partners/new">New partner</a></li>
+                        <li><a href="/logout">Logout</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    <% } %>
     
     <div class="container">
         <div class="row">
@@ -33,7 +62,7 @@
                         <button class="btn btn-lg btn-primary btn-block">Submit!</button>
                     </div>
                 </form>
-                <!-- <a href="/posts">Go Back</a> -->
+                 <% if(currentUser){ %> <a href="/posts">Go Back</a> <% } %>
             </div>
         </div>
     </div>
