--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,7 +20,11 @@
                         <li><a href="/partners">Partners</a></li>
                         <li><a href="/posts/new">New post</a></li>
                         <li><a href="/partners/new">New partner</a></li>
-                        <li><a href="/logout">Logout</a></li>
+                        <% if(currentUser){ %>
+                            <li><a href="/logout">Logout</a></li>
+                        <% }else{ %>
+                            <li><a href="/login">Login</a></li>
+                        <% } %>
                     </ul>
                 </div>
             </div>
