--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,9 +1,9 @@
 <% include ./partials/header.ejs %>
 
 <div class="container">
-    <div class="row">
-        <h1 style="text-align: center">ADMIN-page</h1>
-        <div style="width: 30%; margin: 25px auto;">
+    <div class="row row-centered">
+        <h1 class="text-center">ADMIN-page</h1>
+        <div class="col-lg-6 col-md-8 col-xs-10 col-centered">
             <form action="/login" method="POST">
                 <div class="form-group">
                     <input class="form-control" type="text" name="username" placeholder="username">
