--- a/views/newpost.ejs
+++ b/views/newpost.ejs
@@ -34,8 +34,8 @@
     
     <div class="container">
         <div class="row">
-            <h1 style="text-align: center">Claim je voordeel!</h1>
-            <div style="width: 80%; margin: 25px auto;">
+            <h1 class="text-center">Claim je voordeel!</h1>
+            <div style="width: 80%; margin: 15px auto;">
                 <form action="/posts" method="POST" id="partnerform">
                     <div class="form-group">
                         <input class="form-control" type="text" name="instaname" placeholder="Instagram naam">
