--- a/views/editpartner.ejs
+++ b/views/editpartner.ejs
@@ -2,7 +2,7 @@
     
     <div class="container">
         <div class="row">
-            <h1 style="text-align: center">Edit partner</h1>
+            <h1 style="text-align: center">Edit <%= partner.name %> </h1>
             <div style="width: 30%; margin: 25px auto;">
                 <form action="/partners/<%= partner._id %>/?_method=PUT" method="POST">
                     <div class="form-group">
@@ -13,6 +13,9 @@
                     </div>
                     <div class="form-group">
                         <input class="form-control" type="text" name="partner[voordeel]" value="<%= partner.voordeel %>">
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" type="text" name="partner[codes.voorstuk]" value="<%= partner.codes.voorstuk %>">
                     </div>
                     <div class="form-group">
                         <button class="btn btn-lg btn-primary btn-block">Submit!</button>
