--- a/views/newpartner.ejs
+++ b/views/newpartner.ejs
@@ -6,13 +6,16 @@
             <div style="width: 30%; margin: 25px auto;">
                 <form action="/partners" method="POST">
                     <div class="form-group">
-                        <input class="form-control" type="text" name="name" placeholder="naam">
+                        <input class="form-control" type="text" name="partner[name]" placeholder="naam">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" name="image" placeholder="image">
+                        <input class="form-control" type="text" name="partner[image]" placeholder="image">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" name="voordeel" placeholder="voordeel">
+                        <input class="form-control" type="text" name="partner[voordeel]" placeholder="voordeel">
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" type="text" name="partner[codes.voorstuk]" placeholder="voorstuk voor codes">
                     </div>
                     <div class="form-group">
                         <button class="btn btn-lg btn-primary btn-block">Submit!</button>
