Added full code generating and claiming functionality except for sending the mail

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -35,4 +35,9 @@
                     <%= succes %>
                 </div>
             <% } %>
+            <% if(error && error.length > 0){ %>
+            <div class="alert alert-danger" role="alert">
+                <%= error %>                                   
+            </div>
+        <% } %>
         </div>
