WEIRD BUG WITH /partners/new => bypassed with /newpartner + minor updates

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,7 @@
                         <li><a href="/posts">Posts</a></li>
                         <li><a href="/partners">Partners</a></li>
                         <li><a href="/posts/new">New post</a></li>
-                        <li><a href="/partners/new">New partner</a></li>
+                        <li><a href="/newpartner">New partner</a></li>
                         <% if(currentUser){ %>
                             <li><a href="/logout">Logout</a></li>
                         <% }else{ %>
