--- a/views/partners.ejs
+++ b/views/partners.ejs
@@ -8,6 +8,10 @@
                         <h4 class="text-center"><%= partner.name %></h4>
                         <a href="/partners/<%= partner._id %>"><img id="partnerimage" src="<%= partner.image %>"></a>
                         <p class="partner-text"><strong>voordeel:</strong> <%= partner.voordeel %></p>
+                        
+                        <p class="partner-text"><strong>Geclaimde codes:</strong> <%= partner.codes.geclaimd.length %></p>
+                        
+                        <!--
                         <p class="partner-text"><strong>voorstuk:</strong> <%= partner.codes.voorstuk %></p>
                         
                         
@@ -15,13 +19,15 @@
                         <a class="btn btn-sm btn-warning partner-text" href="/partners/<%= partner._id %>/edit">edit</a>
                         
                         <form class="inline-form" method="POST" action="/partners/<%= partner._id %>/addcodes?_method=PUT" >
-                            <input class="smallInput"type="text" name="aantalCodes" placeholder="#codes">
                             <input type="Submit" class="btn btn-sm btn-info" value="Add">
+                            <input class="smallInput"type="text" name="aantalCodes" placeholder="#codes">
                         </form>
                         
                         <form class="inline-form" method="POST" action="/partners/<%= partner._id %>?_method=DELETE" >
                             <input type="Submit" class="btn btn-sm btn-danger" value="Delete">
                         </form>
+                        
+                        -->
                     </div>
                 </div>
             <% }); %>
