fixed /partners/new buggit add . SEE ORDER OF app.get(), /:id was called before /new

--- a/views/newpost.ejs
+++ b/views/newpost.ejs
@@ -20,7 +20,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="/posts">Posts</a></li>
                         <li><a href="/partners">Partners</a></li>
-                        <li><a href="/newpartner">New post</a></li>
+                        <li><a href="/partners/new">New post</a></li>
                         <li><a href="/partners/new">New partner</a></li>
                         <li><a href="/logout">Logout</a></li>
                     </ul>
