--- a/views/partner.ejs
+++ b/views/partner.ejs
@@ -56,7 +56,7 @@
                     <thead>
                         <tr>
                             <th><strong>Total likes</strong></th>
-                            <th><strong>Total followers</strong></th>
+                            <th><strong>Total volgers</strong></th>
                             <th><strong>Berijkequivalent</strong></th>
                         </tr>
                     </thead>
