--- a/views/partner.ejs
+++ b/views/partner.ejs
@@ -77,9 +77,9 @@
         <div class="row text-center" style="display:flex; flex-wrap: wrap;">
             <% partner.posts.forEach(function(post){ %>
                 <% if(post.image){ %>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <div class="thumbnail">
-                           <img src="<%= post.image %>">
+                           <a href="<%= post.link %>"><img src="<%= post.image %>"></a>
                         </div>
                     </div>
                     <% } %>
